--- a/gb/news2008_10.md
+++ b/gb/news2008_10.md
@@ -1,4 +1,30 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/hxrfvz257/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/hxrfvz257/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxrfvz257/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/hxrfvz257/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11682584.md#1" target="_blank">“癌症之王”胰脏癌夺命快 6症状不可忽视</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11682584.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Pancreatic-cancer_1007278972-150x120.jpg" align ="left"></a>知名健检机构联安诊所的创办人李文雄，11月22日因胰脏癌病逝，消息震惊外界。胰脏癌难发现，一旦确诊通常已是晚期，而且预后差，被喻为“医生也举白旗投降”的难治之症。早期的胰脏癌几乎没有什么症状，但随着肿瘤扩大，依肿瘤长在胰脏不同部位而出现不同的症状：上腹痛痛、黄疸、大便灰白色、体重减轻及食欲变差、血糖急速上升等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 1:07 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11682129.md#1" target="_blank">【爸妈必修课】哺乳建立安全感 否则后患无穷</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11682129.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Tu1_shutterstock_116263561-150x120.jpg" align ="left"></a>视频：哺乳阶段必须要做的一件事情！否则日后会导致各种难以解决的问题！
+
+本文刊载于旧金山11月23日教育版
+每周为您献上旧金山最新消息
+责任编辑：李欧......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 6:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11681148.md#1" target="_blank">花10天走350公里 俄邮差送爱到偏远地区</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11681148.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-890942576-150x120.jpg" align ="left"></a>为了送信到偏远地区，俄罗斯一名邮差花了10天、走了350公里的路。他所递送的显然不光是邮件与包裹，还有满满的爱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 3:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11680882.md#1" target="_blank">痛风是吃出来的！中医3招止痛 1味食疗改善</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11680882.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/gout4_728192224-150x120.jpg" align ="left"></a>痛风是一种极度疼痛的关节炎，常发生在脚拇趾关节，俗称“帝王病”。过去富贵人家吃得太好才容易发生痛风，但到了物质丰富的现代，痛风则成了寻常百姓也会有的疾病。自古以来中医就有治疗痛风的妙方，再通过饮食控制、药膳调养、穴位按摩，可明显改善或预防痛风发作。痛风饮食禁忌：1. 戒吃高普林食物。中医食疗改善痛风效果非常好。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 2:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11680356.md#1" target="_blank">眼睛的料理 日式咖啡厅之温馨美味</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11680356.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/IMG_4255-150x120.jpg" align ="left"></a>文：张可欣 | 图：童宇、张可欣
+
+走进Yama咖啡厅(2007 East Hastings, Vancouver BC)，主人面带微笑令人放松。桌上的鲜花、木制餐桌椅、洁净的餐具，顷刻映入眼帘；宁静优雅环绕，顿觉温馨舒适，就是这里了。
+
+主人Yama日本夫妇用心地营造了这样一个舒适的氛围，快乐地迎接着每一位来.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 11:19 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11680915.md#1" target="_blank">4大因素 加速温哥华住房市场复苏</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/26/n11680915.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/Metro-Vancouver-Real-Estate-150x120.jpg" align ="left"></a>一份新的报告显示，房价下跌、抵押贷款利率下降、人口增长和经济持续增长促使购房者重返房地产市场。不过，报告也显示，尽管房屋销售市场以高于人们预期的速度增长，但难以恢复到两年前卖方市场的火爆场景，特别是温哥华房地产市场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 10:34 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11678280.md#1" target="_blank">上班后喂母乳的相关问题</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11678280.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1911br2401-150x120.jpg" align ="left"></a>只要有准备，全职妈妈也可以轻松面对一边上班，一边喂哺母乳。先要与家人沟通，确保得到家人全力支持与配合。同时还要获得上司的同意和支持，在工作和休息时，弹性安排挤奶的时间。 到开始上班时，妈妈可于早上出门前，先喂哺一次，因乳汁最多，宝宝吸吮一边乳房时，另一边用泵奶器挤出母乳。上班后，利用午饭或休息时间挤奶，若宝宝少于六个月.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 6:47 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11678418.md#1" target="_blank">吃药卡喉咙怎么办？4招顺利吞药</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11678418.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/take-medicine_1039856758-150x120.jpg" align ="left"></a>吃药后喉咙有卡卡的感觉，是什么原因？错误的服药方法不仅会让药片卡喉咙，还可能引起食道溃疡。医师教你4招顺利吞药，避免伤食道。食道是连结咽喉与胃部的管状构造，并非宽度一致；其中，食道入口、支气管交叉处，以及贯穿横膈膜处，3个部位比较细窄。服药如果在沿途卡关，很可能因药物溶解而侵蚀食道，造成溃疡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月26日 2:52 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11678096.md#1" target="_blank">为什么总是咬指甲？3大原因看你是哪种</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11678096.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/bite-nails_411248497-150x120.jpg" align ="left"></a>我们身边有一些人总喜欢咬指甲，是什么原因呢？会不会对身体有伤害？咬指甲的3个原因：1. 通过咬指甲缓解压力如何摆脱咬指甲的习惯？
+
+如何改正咬指甲的习惯？针对不同的原因有不同的方法。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:19 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679782.md#1" target="_blank">厨房中的钻石 带着王者之香的松露</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679782.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1083034662-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>尽管今天欧洲松露闻名于世，但实际上人类食用松露的历史，却起源于4000年前的两河流域一带，几乎与本次人类文明一样长久。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:16 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679624.md#1" target="_blank">每周饮酒1次 研究：头颈癌风险增近2倍 下咽癌19倍</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679624.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/drink-beer-cancer_1058875226-150x120.jpg" align ="left"></a>国家卫生研究院针对酒精对罹患头颈癌的风险进行研究，25日公布研究结果，结果发现，酒精会增加罹头颈癌风险，甚至与没有喝酒的患者相比，罹下咽癌风险更高达19倍。国卫院提醒，民众仍应减少自身的饮酒行为，为自己的健康把关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 8:28 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/24/n11676688.md#1" target="_blank">餐饮业经营三年倒闭者约八成 问题在哪里？</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/24/n11676688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/20190816_shouhuihsu_shutterstock_1449099398_01-150x120.jpg" align ="left"></a>餐饮业与零售业不同，光看展示食品也看不出口味，因此很容易形成“被动”态度。尤其是中小型个人餐饮店特别被动，也是营业额拉不上去的主因之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 7:54 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679072.md#1" target="_blank">苹果25亿住房资金 需与政府建商大力整合</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/25/n11679072.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/201910esatbay-2-1-150x120.jpg" align ="left"></a>编译｜艾薇?大纪元
+本月初苹果（Apple）承诺拿出25亿美元援助加州的住房危机，据圣荷西信使报报导，估计该州需要多达350万套新房，且这里的建筑成本居全国之最，25亿美元能做什么？目前，该计划还缺少细节，该基金的成功与否很大程度上取决于苹果和州政府的支出计划。
+开发项目可能面临地方社区挑战
+加州大学伯克利分校特.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/23/n11675968.md#1" target="_blank">白天停车场 晚上“游民避风港”只为街友一夜好眠</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/23/n11675968.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c380c8fb2034858ca1aaae21b1c24707-150x120.jpg" align ="left"></a>在繁华都市的角落，有时会看到一些无家可归、流浪街头的人，尤其在天气寒冷时对他们来说更是严酷的挑战；澳大利亚慈善机构Beddown决定帮助这些急需要帮助的人。但要提供什么帮助给那些街友们呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:39 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673699.md#1" target="_blank">这位百万YouTuber是谁？他是最有钱网红</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673699.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/1da2991e5f90a3873855d6f878dda0a9-150x120.jpg" align ="left"></a>这个刚收到百万YouTuber奖牌的人，被称为史上最有钱网红！还有的网友说，他连YouTube买的起！短短27秒的短片不到1个月吸引了500万的观看次数，猜猜看这个又有钱、又有人气的人是谁呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673731.md#1" target="_blank">泰迪熊贵宾萌犬 7.5万粉丝太爱它了</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673731.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/c1ae9930d642281f7d796381196e22cf-150x120.jpg" align ="left"></a>这一只叫奥立佛（Oliver）的狗狗住在挪威，因为长得像极了泰迪熊而成为一只网红狗；它有一双圆滚滚、乌黑发亮的眼睛，浑圆耳朵还挺得高高，真是如假包换的泰迪熊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 3:17 PM			</td></tr>
@@ -23,30 +49,5 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/19/n11666020.md#1" target="_blank">全台最长 元月七彩双龙吊桥体验30层楼云端漫步</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/19/n11666020.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/ebf77f467c1b58fb8a718ad014bed6d2-150x120.jpg" align ="left"></a>号称全台最长、最深的南投信义乡双龙吊桥，全长342公尺，与溪谷之间的最深处可达110公尺，约30层楼高，走在吊桥上眺望峡谷，彷若在云端漫步的感觉；不过，对高度比较过敏的人来讲，可能是一趟紧张又刺激的难忘旅程喔！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 8:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/24/n11676632.md#1" target="_blank">日本寺院内为香港祈福的绘马 多遭涂污破坏</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/24/n11676632.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-642495986-150x120.jpg" align ="left"></a>绘马是人们在日本神社、寺院里祈愿时所使用的一种奉纳物，一般由木板制成，呈五角形。随着香港反送中抗争的延烧，日本多所寺院发现，不少人在绘马上书写支持香港的祈愿内容，但这样的绘马往往遭人涂污或破坏，或以简体中文写上脏话，疑为大陆人士所为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 7:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/24/n11676721.md#1" target="_blank">温哥华赤阪寿司：那份与众不同的味道</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/24/n11676721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Akasaka-Sushi-fish_JWU_2611-s-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" align ="left"></a>位于大温哥华地区素里的赤阪日本餐厅（Akasaka Japanese Sushi & BBQ），前身是获得旅行顾问（Tripadvisor）的五星级评分的本拿比Satomy寿司店，他们的食物令客人赞不绝口。店内两个日本主厨，都是具有多年丰富经验的日本料理高手。这也是笔者在温哥华品尝到的最好的日本料理之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 2:24 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/20/n11667794.md#1" target="_blank">眩晕的指压缓解法及防止复发秘诀</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/20/n11667794.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/35790476c9314341a4006c32fd3a6c79-150x120.jpg" align ="left"></a>眩晕，眩即眼花，晕是头晕，两者常同时并见，故统称为“眩晕”；眩晕与我们一般所说的头晕不同处，头晕通常只有头痛脚轻之感，眩晕则是指当人静止时却感到周边环境有相对运动的状态；眩晕发作时常常是天旋地转或是摇晃的一种感觉，轻则闭目可缓解；严重时，闭目亦难缓解。眩晕常常伴随着恶心，呕吐，盗汗或是不良于行。当头部有所移动的时候，眩.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月24日 3:22 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/23/n11676211.md#1" target="_blank">退休金存100万美元够吗？答案可能出乎意料</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/23/n11676211.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/11.53.33-600x400-150x120.png" align ="left"></a>辛苦工作几十年后，终于可以退休了。退休之后有退休金和政府福利金可以领，这样的生活也许是很多人的向往。但是，你的退休金真的存够了吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 10:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673463.md#1" target="_blank">如何加热冷藏的母乳？</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673463.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/20191101-Chi-Jin-Zi-Jin-Tang-04-1-150x120.jpg" align ="left"></a>如是结冰奶，要把冰奶在前一晚从冰格移到冷藏格慢慢溶解，并须于24小时内饮用。如需加快溶解冰奶，可用自来水冲奶瓶。若要饮用的是冷冻奶，未必需要加热，因宝宝可以直接饮用冷冻奶。如有需要，可把奶瓶放进暖水(55℃以下)加暖至合适温度，把奶滴在你的手背试温，感到暖和便合适了。加暖后的奶须于1小时内饮用。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:27 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11675054.md#1" target="_blank">推广助力品质优先  韩国食品香飘海外</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11675054.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/b50cc8bbaa16c8894b388dbda17d1226-150x120.jpg" align ="left"></a>如今，韩国食品越来越受各族裔的欢迎。在美国，不仅韩国超市和中国超市少不了韩国食品的身影，在西人开的超市例如好市多（Costco）里面，韩国出口的海苔、饮料、拉面、辣椒酱、韩国梨等，也从货架走进千千万万美国人的家庭。
-
-很多人对韩国食品的印象是健康、品质好。韩国食品走出国门被更多人了解和接受，离不开韩国农林水产食品部.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 9:56 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/23/n11675271.md#1" target="_blank">天然打扫法！除了小苏打 还有4种神奇打扫用品</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/23/n11675271.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/clean-room_465031619-150x120.jpg" align ="left"></a>用天然的方法打扫房间，不仅对家人和自己的身体好，也十分轻松方便。看着闪亮亮的房间，自己也变得精神百倍。日本食育师妈妈蔡庆玉分享天然打扫秘诀。“马上丢”、“马上洗”心法：天然打扫用品
-
-这几年来，日本很流行天然打扫法，尽量不要用很强的化学清洁剂，对自己和家人身体不好，对环境造成伤害。● 神奇的小苏打粉......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 9:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/20/n11670037.md#1" target="_blank">The Kunjip真正道地的韩国味道</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/20/n11670037.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/BGZ01091-150x120.jpg" align ="left"></a>The Kunjip是纽约经典韩餐厅，味道正宗好吃，服务周到，价格实惠，门前经常大排长龙。
-
-老板朴海花女士，来美国30年，是韩国街“繁荣会”的会长，也是纽约“韩食世界化”的理事。Kunjip的中文是“大伯”的意思，在韩国传统文化中，去伯父家吃饭，总是能吃到最丰盛、最可口的美味。朴老板说，她愿意将韩餐介绍给世界各族.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 9:05 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11674330.md#1" target="_blank">韩国参鸡汤  真材实料美味速递</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11674330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/15d994363c7b2e99_ttl7dayskO_3-150x120.jpg" align ="left"></a>感恩节快到了，西方的习俗是感恩节吃火鸡。可当你面对着好大一只火鸡，还要进行加工烹调，确实是件费心费力的事。今年的感恩节，你想过试试别的桌上选择吗？
-
-韩国参鸡汤虽然听起来是汤，里面确是有一整只鸡和人参、糯米等食材，经过炖煮后，鸡肉软嫩鲜甜不油腻，有“韩国第一名汤”的美誉。如果单单说是喝汤，似乎淡化了参鸡汤里可以吃的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 4:04 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/6/n11638340.md#1" target="_blank">感恩节送正宗韩国梨</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/6/n11638340.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/shutterstock_1176482194-1-150x120.jpg" align ="left"></a>超市里，新鲜上架的水果讨人喜爱，而真正正宗的韩国梨可以说以其又圆又大的个头、甜蜜多汁的口感和细嫩雪白的果肉占有显要地位。我们今天谈到的韩国梨，不只是概念上属于韩国品种的梨，而且是真正地道在韩国生长成熟、具有韩国的地域风味梨。
-
-出口到美国的韩国梨大都以塑料盒或纸盒包装，出售时往往以盒为单位，一盒的个数虽不多，但个个.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 4:01 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank">鼠疫慌 京蒙之间设三道防线 河北现“通知”</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/EJ7uJQMUYAAz_e2-150x120.jpeg" align ="left"></a>内蒙、甘肃等地早些时间已爆发鼠疫，但当局掩盖真相，人心惶恐。目前内蒙已接近草木皆兵，车站、火车站、机场、医院都要检查体温。有网上消息称，目前很多村庄已经被完全封锁，村民不许进出，村庄通讯也遭切断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/17/n11661713.md#1" target="_blank">胃痛原因多 自我指压可缓解</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/17/n11661713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/06/1506080730501778-150x120.jpg" align ="left"></a>在中医观点，多由外感寒邪，饮食所伤，情志不畅和脾胃虚弱等病因而引发。胃是主要病变脏腑，常与肝脾等脏有密切关系。胃气郁滞，失于和降是胃痛的主要病机。治疗以理气和胃为主，若由于忧思恼怒，肝气失调，横逆犯胃所引起，则治法应以疏肝理气为主。 若由脾不健运，胃失和降而导致，则用温通补中法，以恢复脾胃的功能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 2:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673231.md#1" target="_blank">以中国古老秘术“灸”祛病养生</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/22/n11673231.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/06/Moxibustion2--150x120.jpg" align ="left"></a>?针、灸、药是中国传统医学的宝藏，古人云：“针之不到，药之不及，必灸之。”灸，即是点燃艾条之后去薰烤人体体表穴位。很多时候，灸比针更适合用于治疗疾患，扶正延寿。
-
-艾灸，这一中国最古老的养生祛病秘术，如今在卡城LG诊所得到大力研究和应用。老板郭南希介绍，艾灸特别适合加拿大，适合卡尔加里，因为这里冬季寒冷，长达半年有.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 12:40 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/21/n11671676.md#1" target="_blank">含植物油食品恐致癌 台拟制造标准 亚洲首例</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/21/n11671676.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/palm-oil_127469948-150x120.jpg" align ="left"></a>近年来各国陆续发现经高温处理的植物油加工食品中，可能含有具致癌性物质“缩水甘油脂肪酸酯”，目前仅有欧盟订定相关限量标准，卫福部食药署基于保障国人食品安全，目前正研拟比照欧盟规范，将是亚洲首见，新制最快明年上半年实施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 11:01 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/16/n11660453.md#1" target="_blank">Gopchang Story Flushing精致烤牛肠</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/11/16/n11660453.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/image0-150x120.jpeg" align ="left"></a>动物内脏含有丰富的铁，人们食用益于补铁，但如何能把内脏做成美味的料理，可是需要厨师下一定功夫的。亚洲人比美国人有更多食用动物内脏的经验和习惯，韩国人就喜欢把牛或猪的内脏烤熟，然后蘸上调味汁来食用。有一家纽约曼哈顿的韩国餐馆把烤肠做得很成功，让美国的食客吃得意犹未尽。老板今年在法拉盛新开了一家取名Gopchang Sto.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月22日 10:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_9.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;10&nbsp;&nbsp;<a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_11.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/hxrfvz257/djy/blob/master/gb/news2008_10.md#1<br><a href="https://github.com/hxrfvz257/djy/blob/master/gb/news2008_10.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/hxrfvz257/djy/blob/master/gb/news2008_10.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2008_10.htm">http://www.epochtimes.com/gb/news2008_10.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
