--- a/gb/nf5773_6.md
+++ b/gb/nf5773_6.md
@@ -17,7 +17,7 @@
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/12/n11584478.md#1" target="_blank">十一阅兵红后代方阵 泄中共残酷内斗秘密</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/12/n11584478.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/ec90893575857e949c8d79e7991c0f76-150x120.jpg" align ="left"></a>中共“十一”大阅兵虽然已经过去十多天，但是那个坐着很多红后代的方阵队，因为这些红后代坐在一起、举着其前辈的照片，格外引人关注，所以中共互相血腥内斗的往事再次被提起。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月13日 6:12 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/12/n11583689.md#1" target="_blank">受贿逾8千万 内蒙古厅官李世镕贪腐细节曝光</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/12/n11583689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/li-shirong5b-150x120.jpg" align ="left"></a>中共内蒙古厅官李世镕今年8月以受贿、挪用公款等五罪被判无期徒刑。陆媒日前披露了李世镕从收受他人几万元“礼金”开始，到动辄收受或勒索上百万元现金、存款、干股或房产等的过程。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月12日 1:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/11/n11582097.md#1" target="_blank">长春公安局前副局长及两名区分局局长落马</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/11/n11582097.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/09/2-beijing-GettyImages-499714058-150x120.jpg" align ="left"></a>10月11日，中共吉林省长春市公安局前副局长董世年、市公安局二道区分局局长宋今东、市公安局宽城区分局局长张国臣落马。3人均在长春市公安系统长期任职。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 5:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/10/n11581192.md#1" target="_blank">充当涉黑保护伞 黑龙江公安厅厅官被处分</a><br></h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/10/n11581192.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/yanzizhong-Web-Banner-1200x800-v1a-150x120.jpg" align ="left"></a>中共黑龙江省公安厅前巡视员、牡丹江市公安局原局长闫子忠日前被开除党籍并移送司法。闫子忠被指包庇纵容涉黑涉恶人员，充当“保护伞”，收受巨额贿赂，贪污等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月11日 7:19 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/22/n11604526.md#1" target="_blank">上海杨浦法院院长任涌飞被查 曾是陈旭旧部</a><br></h3>10月21日晚，中共上海市杨浦法院院长任涌飞涉嫌“严重违纪违法”，目前正接受调查。上海前检察长陈旭曾是任涌飞的上司。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月22日 6:28 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/21/n11601944.md#1" target="_blank">贵州正厅长级官员涉贪污受贿被双开</a><br></h3>10月21日，贵州省有色金属和核工业地质勘查局原党委委员、副局长宫晓农（正厅长级）被双开并被移送起诉。宫晓农的罪名之一是公开发表与中共最高层不同调的言论。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月21日 4:51 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/19/n11598564.md#1" target="_blank">云南西双版纳前政法委书记刀勇被审查</a><br></h3>10月19日，中共云南省前西双版纳州委副书记、政法委书记刀勇被立案审查调查并被双开。刀勇曾任昆明市公安局局长。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月19日 12:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/hxrfvz257/djy/blob/master/gb/19/10/18/n11596974.md#1" target="_blank">受贿三千余万 酒泉钢铁前董事长获刑13年</a><br></h3>10月18日上午，甘肃酒泉钢铁（集团）有限责任公司（下称酒钢）原董事长冯杰被判刑13年。其被指控受贿逾3170万（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月18日 6:10 PM							</td></tr>
